Folder name change

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@ Backpropagation and SGD/plots/
 Backpropagation and SGD/results/
 Rosenblatt Perceptron Algorithm/plots/
 Rosenblatt Perceptron Algorithm/results/
+.Ds_Store
+.idea/
